# Audioimporter

./: Cargo.toml  README.md  cep.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
electron/: main.js  preload.js
src/: Cargo.toml
src/js/Bg/: background.html  background.js
src/js/main/: CSInterface.js  Modal.css  Modal.tsx  electron_script.js  import_audio.jsx  index.html  index.tsx  main.tsx  preload.js  server.rs  styles.css  types.ts
src/js/settings/: index.js  main.tsx  settings.tsx  types.ts
src/jsx/: importAudio copy.jsx  importAudio.jsx  tsconfig.json
