[package]
name = "audio_importer"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
futures-channel = "0.3"
uuid = { version = "1", features = ["v4"] }
rdev = "0.4.6"
tokio-stream = "0.1"
lazy_static = "1.4.0"
device_query = "1.1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.17"
futures-util = "0.3"



[[bin]]
name = "audio_importer"
path = "src/js/main/server.rs"